Realigned Jumbotron. Fixed up About Me page a little.

--- a/styles/main.css
+++ b/styles/main.css
@@ -40,6 +40,11 @@
     color: #fff;
 }
 
+.about .container {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
